WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233303
[LFC][IFC] Should not always keep the entire continuous content when the line is empty
https://bugs.webkit.org/show_bug.cgi?id=233303
Summary
[LFC][IFC] Should not always keep the entire continuous content when the line...
alan
Reported
2021-11-17 20:11:32 PST
ssia
Attachments
Patch
(2.82 KB, patch)
2021-11-17 20:18 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-11-17 20:18:28 PST
Created
attachment 444632
[details]
Patch
EWS
Comment 2
2021-11-18 06:54:21 PST
Committed
r286001
(
244398@main
): <
https://commits.webkit.org/244398@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444632
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-18 06:55:55 PST
<
rdar://problem/85548525
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug