[LFC][IFC] Should not always keep the entire continuous content when the line is empty https://bugs.webkit.org/show_bug.cgi?id=233303

Reviewed by Antti Koivisto.

The rule of "let's keep the first glyph on the line" should take into account when
the continuous content has a series of runs e.g [X][X][X] where each 'X' represents an individual inline text item.
In such cases we should just return the first text run as the trailing inline item with 'break' action.
(This patch is in preparation for enabling IFC's preferred width computation.)

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
* rendering/RenderBlockFlow.cpp:



Canonical link: https://commits.webkit.org/244398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286001 268f45cc-cd09-0410-ab3c-d52691b4dbfc